# mathy-notes

./: Cargo.toml  README.md
.github/workflows/: rust.yml  rust_release.yml
src/: expr.rs  main.rs
