[package]
name = "mathy-notes"
version = "0.1.6"
edition = "2021"
description = "Do math in your text editor! Ctrl-Enter or Shift-Enter to evaluate. Mainly a personal project, do not expect stability from this."
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21", features = ["persistence"] }
