[package]
name = "mathy-notes"
version = "0.2.1"
edition = "2021"
description = "Do math in your text editor! Ctrl-Enter or Shift-Enter to evaluate. Mainly a personal project, do not expect stability from this."
license = "0BSD"
repository = "https://github.com/rdrpenguin04/mathy-notes/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27", features = ["persistence"] }
